--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,12 @@
+
+## set a bash alias, as a config item... then run shotshell
+$ SHOTSHELL[fooo]='bar'
+## echo ${SHOTSHELL[fooo]}
+$ shotshell;
+## ... it uses SHOTSHELL internally on your stuff.
+
+###
+
 be able to perform this:
 
 
