--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,17 @@
+async = require('async')
+var sys = require('sys'),
+    exec = require('child_process').exec;
+
+
+async.parallel([
+  async.apply(exec, 'sleep 4'),
+  async.apply(exec, 'touch /tmp/blahlah')
+], 
+function (err, results) {
+  console.log(results);
+});
+
+###
 be able to perform this:
 
 
